Fix navbar so it is not visible when the page loads

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,7 +72,6 @@ header {
     z-index: 2;
     font-weight: normal;
     opacity: 0;
-    transition: opacity 1s;
 }
 
 header nav {
@@ -88,7 +87,6 @@ header nav {
     width: 100%;
     background-color: #1f2833;
     opacity: 0;
-    transition: opacity 1s;
 }
 
 header nav li {
